--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <groupId>jline</groupId>
     <artifactId>jline2</artifactId>
     <name>JLine2</name>
-    <version>2.11-SNAPSHOT</version>
+    <version>2.10.1</version>
 
     <licenses>
         <license>
